[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scene Sheets/Welcome scene.png" type="Texture" id=1]
[ext_resource path="res://PO_Idle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Manager_Idle.tscn" type="PackedScene" id=3]
[ext_resource path="res://WelcomeScene.gd" type="Script" id=4]
[ext_resource path="res://DialogBox.gd" type="Script" id=7]
[ext_resource path="res://Menu Buttons.tscn" type="PackedScene" id=10]
[ext_resource path="res://Construction Site w Chickens.tscn" type="PackedScene" id=11]
[ext_resource path="res://TeamIntro.tscn" type="PackedScene" id=12]
[ext_resource path="res://PopUpWindow2.tscn" type="PackedScene" id=17]
[ext_resource path="res://UI/Pop up window/sprint layout with weeks and stages.png" type="Texture" id=18]
[ext_resource path="res://DialogBoxes.tscn" type="PackedScene" id=19]
[ext_resource path="res://TransitionStageScene.tscn" type="PackedScene" id=20]

[node name="WelcomeScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="WelcomeScene" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Manager_Idle" parent="." instance=ExtResource( 3 )]
position = Vector2( 688, 457 )
scale = Vector2( 2, 2 )

[node name="PO_IDle" parent="." instance=ExtResource( 2 )]
position = Vector2( 509, 381 )
scale = Vector2( 2, 2 )

[node name="DialogBox" type="Control" parent="."]
anchor_left = 0.522
anchor_top = 1.0
anchor_right = 0.522
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -342.0
margin_right = 350.0
margin_bottom = -36.0
script = ExtResource( 7 )
dialogue_file_path = "res://JSON/prologue.json"

[node name="PopUpWindow" parent="DialogBox" instance=ExtResource( 17 )]
visible = false
margin_left = -30.0
margin_top = -177.0
margin_right = -29.0
margin_bottom = -174.0

[node name="SprintLayout" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 333.84, -26 )
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )

[node name="ConstructionSite" parent="DialogBox" instance=ExtResource( 11 )]
visible = false
position = Vector2( -318.16, -378 )

[node name="TeamIntro" parent="DialogBox" instance=ExtResource( 12 )]
visible = false
position = Vector2( -318.16, -379 )

[node name="DialogBoxes" parent="DialogBox" instance=ExtResource( 19 )]
margin_left = -180.16
margin_top = 19.0
margin_right = 145.84
margin_bottom = 72.0

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="TransitionStageScene" parent="DialogBox" instance=ExtResource( 20 )]
visible = false
position = Vector2( -318.16, -378 )

[node name="MenuButtons" parent="." instance=ExtResource( 10 )]

[connection signal="dialog_index_fully_updated" from="DialogBox/PopUpWindow" to="DialogBox" method="_on_PopUpWindow_dialog_index_fully_updated"]
[connection signal="pop_up_window_complete" from="DialogBox/PopUpWindow" to="DialogBox" method="_on_PopUpWindow_pop_up_window_complete"]
[connection signal="button_pressed" from="DialogBox/DialogBoxes" to="DialogBox" method="_on_DialogBoxes_button_pressed"]
[connection signal="gui_input" from="DialogBox/DialogBoxes" to="DialogBox" method="_on_DialogBoxes_gui_input"]
[connection signal="mouse_entered" from="DialogBox/DialogBoxes" to="DialogBox" method="_on_DialogBoxes_mouse_entered"]
[connection signal="tween_completed" from="DialogBox/Tween" to="DialogBox" method="_on_Tween_tween_completed"]
